@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.389 2003-03-05 19:23:31 castaglia Exp $
+$Id: NEWS,v 1.390 2003-03-05 21:55:53 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -18,6 +18,9 @@ CVS
   configure a timer when SSL/TLS handshakes are occurring, to prevent
   a malicious client from attempting to DOS a TLS-enabled server.  The default
   timeout is 5 minutes.
+- Bug 1869 - Add option "-S/--server" to ftpcount, ftptop, ftpwho.  This
+  option can be used to specify a ServerName; the utilities will then
+  display information for that specific server.
 
 1.2.8 - Released 04-Mar-2003
 ---------------------------------
